[package]
description = "Parser for the TLS protocol"
license = "MIT/Apache-2.0"
keywords = ["TLS","SSL","protocol","parser","nom"]
homepage = "https://github.com/copslock/tls-parser"
repository = "https://github.com/copslock/tls-parser.git"
documentation = "https://docs.rs/tls-parser"
name = "tls-parser"
version = "0.6.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parsing"]
readme = "README.md"
build = "build.rs"

include = [
  "LICENSE-*",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "benches/*.rs",
  "build.rs",
  "src/*.rs",
  "tests/*.rs",
  "scripts/tls-ciphersuites.txt",
  "scripts/extract-iana-ciphers.py"
]

[lib]
name = "tls_parser"

[features]
default = []
serialize = []

[dependencies]
nom = "^3.0"
phf = "0.7.16"
enum_primitive = "^0.1"
# rusticata-macros = "1.0.0"
cookie-factory = "0.2"

[dependencies.rusticata-macros]
# path = "../rusticata-macros"
git = "https://github.com/copslock/rusticata-macros.git"


[dev-dependencies]
pretty_assertions = "0.5.0"

[build-dependencies]
phf_codegen = "0.7.16"

[badges]
travis-ci = { repository = "rusticata/tls-parser" }
